--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="Musicas Tiao Carreiro"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:xGEtBgskpoJmHJa3NgTwumgHKUDjGqt/SkNl/9P6AQk=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -21,12 +21,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=musicas
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=mysql
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
